--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "private": true,
   "dependencies": {
     "express": "4.17.1",
+    "mongodb": "^4.2.0",
+    "randomstring": "^1.2.1",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
