--- a/.github/workflows/_build.yml
+++ b/.github/workflows/_build.yml
@@ -7,5 +7,5 @@ jobs:
     runs-on: ubuntu-latest
     environment: Production
     steps:
-      - name: Build
-          run: echo GitHub Action Running
+      - uses: actions/checkout@v2
+        run: npm ci
