--- a/.github/workflows/_build.yml
+++ b/.github/workflows/_build.yml
@@ -7,5 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     environment: Production
     steps:
-      - uses: actions/checkout@v2
+      - name: Build
+        uses: actions/setup-node@v1
+        with:
+          node-version: '16.x'
         run: npm ci
