--- a/.github/workflows/_build.yml
+++ b/.github/workflows/_build.yml
@@ -11,4 +11,4 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '16.x'
-        run: npm ci
+      - run: npm ci
