--- a/.github/workflows/_build.yml
+++ b/.github/workflows/_build.yml
@@ -7,6 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     environment: Production
     steps:
+      - uses: actions/checkout@v2
       - name: Build
         uses: actions/setup-node@v1
         with:
