--- a/.github/workflows/_build.yml
+++ b/.github/workflows/_build.yml
@@ -8,8 +8,8 @@ jobs:
     environment: Production
     steps:
       - uses: actions/checkout@v2
-      - name: Build
+      - name: Setup node
         uses: actions/setup-node@v1
-        with:
+        with: 
           node-version: '16.x'
       - run: npm ci
