--- a/.github/workflows/_build.yml
+++ b/.github/workflows/_build.yml
@@ -13,3 +13,5 @@ jobs:
         with: 
           node-version: '16.x'
       - run: npm ci
+      - name: Build Express App
+        run: npm run build:api
