--- a/.github/workflows/_build.yml
+++ b/.github/workflows/_build.yml
@@ -15,3 +15,11 @@ jobs:
       - run: npm ci
       - name: Build Express App
         run: npm run build:api
+      - name: Setup SSH Agent
+        uses: webfactory/ssh-agent@v0.4.1
+        with:
+          ssh-private-key: ${{ secrets.DEPLOY_KEY }}
+      - name: Setup known_hosts
+        run: ssh-keyscan -H ${{ secrets.DEPLOY_HOST }} >> ~/.ssh/known_hosts
+      - name: Sync project files (API)
+        run: rsync -avrz --delete ${GITHUB_WORKSPACE}/dist/apps/rickandroll ${{ secrets.DEPLOY_USER}}@${{ secrets.DEPLOY_HOST}}:${{ secrets.REMOTE_APP_PATH }}
