--- a/nx.json
+++ b/nx.json
@@ -29,5 +29,18 @@
       }
     ]
   },
-  "defaultProject": "rickandroll"
+  "defaultProject": "rickandroll",
+  "generators": {
+    "@nrwl/web:application": {
+      "style": "scss",
+      "linter": "eslint",
+      "unitTestRunner": "jest",
+      "e2eTestRunner": "cypress"
+    },
+    "@nrwl/web:library": {
+      "style": "scss",
+      "linter": "eslint",
+      "unitTestRunner": "jest"
+    }
+  }
 }
