--- a/package.json
+++ b/package.json
@@ -10,28 +10,35 @@
   },
   "private": true,
   "dependencies": {
+    "core-js": "^3.6.5",
     "express": "4.17.1",
     "mongodb": "^4.2.0",
     "randomstring": "^1.2.1",
+    "regenerator-runtime": "0.13.7",
     "tslib": "^2.0.0",
     "webpack-node-externals": "^3.0.0"
   },
   "devDependencies": {
     "@nrwl/cli": "13.1.4",
+    "@nrwl/cypress": "13.4.6",
     "@nrwl/eslint-plugin-nx": "13.1.4",
     "@nrwl/express": "13.1.4",
     "@nrwl/jest": "13.1.4",
     "@nrwl/linter": "13.1.4",
     "@nrwl/node": "13.1.4",
     "@nrwl/tao": "13.1.4",
+    "@nrwl/web": "^13.4.6",
     "@nrwl/workspace": "13.1.4",
     "@types/express": "4.17.0",
     "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "~4.33.0",
     "@typescript-eslint/parser": "~4.33.0",
+    "babel-jest": "27.2.3",
+    "cypress": "^9.1.0",
     "eslint": "7.32.0",
     "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-cypress": "^2.10.3",
     "jest": "27.2.3",
     "prettier": "^2.3.1",
     "ts-jest": "27.0.5",
