feat: add web app to ci pipeline

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "scripts": {
     "build:api": "nx run rickandroll:build --prod",
+    "build:app": "nx run rickandroll-web:build --prod",
     "start": "nx serve",
     "build": "nx build",
     "test": "nx test"
