--- a/.github/workflows/_build.yml
+++ b/.github/workflows/_build.yml
@@ -15,6 +15,8 @@ jobs:
       - run: npm ci
       - name: Build Express App
         run: npm run build:api
+      - name: Build Web App
+        run: npm run build:app
       - name: Setup SSH Agent
         uses: webfactory/ssh-agent@v0.4.1
         with:
@@ -23,3 +25,5 @@ jobs:
         run: ssh-keyscan -H ${{ secrets.DEPLOY_HOST }} >> ~/.ssh/known_hosts
       - name: Sync project files (API)
         run: rsync -avrz --delete ${GITHUB_WORKSPACE}/dist/apps/rickandroll ${{ secrets.DEPLOY_USER}}@${{ secrets.DEPLOY_HOST}}:${{ secrets.REMOTE_APP_PATH }}
+      - name: Sync project files (APP)
+        run: rsync -avrz --delete ${GITHUB_WORKSPACE}/dist/apps/rickandroll-web ${{ secrets.DEPLOY_USER}}@${{ secrets.DEPLOY_HOST}}:${{ secrets.REMOTE_WEB_PATH }}
