--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
     "express": "4.17.1",
     "mongodb": "^4.2.0",
     "randomstring": "^1.2.1",
