--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "axios": "^0.26.0",
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
     "express": "4.17.1",
