--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.26.0",
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.0",
     "express": "4.17.1",
     "mongodb": "^4.2.0",
     "randomstring": "^1.2.1",
